fix: enumType 추가 and 버그수정
-